Fix dark mode for question section

--- a/styles/style.css
+++ b/styles/style.css
@@ -223,7 +223,7 @@ body {
         width: 56px;
         height: 56px;
 
-        border: 12px;
+        border-radius: 12px;
     }
 
     .bottomSection__rightSection__question__btn {
@@ -257,6 +257,10 @@ body {
 
     .bottomSection__leftSection__question {
         gap: 184px;
+    }
+
+    .bottomSection__rightSection__question__item__letter {
+        border-radius: 8px;
     }
 }
 
@@ -293,5 +297,17 @@ body {
 .customList__item--dark {
     background-color: var(--blue850);
 
+    box-shadow: 0px 16px 40px rgba(49, 62, 81, 0.14);
+}
+
+.bottomSection__leftSection__question__top__questionNumber--dark {
+    color: var(--blue300);
+}
+
+.bottomSection__leftSection__question__bottom--dark {
+    background-color: var(--blue850);
+}
+
+.bottomSection__rightSection__question__btn--dark {
     box-shadow: 0px 16px 40px rgba(49, 62, 81, 0.14);
 }
